--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 }
 
 .jumbotronText {
-	margin-right: 50px;
+	/*margin-right: 50px;*/
 	font-family: 'Reem Kufi', sans-serif;
 
 }
@@ -26,7 +26,13 @@ h2, h4 {
 
 }
 
-.sidenav {
+p {
+    font-family: 'Nanum Myeongjo', serif;
+    font-size: 16px;
+
+}
+
+#sidenav {
     height: 100px;
     width: 100vh;
     position: fixed;
@@ -39,7 +45,7 @@ h2, h4 {
   	transform:rotate(-90deg) translateX(-100%);
 }
 
-.sidenav a {
+#sidenav a {
     padding: 40px 25px 10px 15px;
     text-decoration: none;
     font-size: 20px;
@@ -50,11 +56,9 @@ h2, h4 {
     line-height:45px;
     text-transform: uppercase;
     font-family: 'Reem Kufi', sans-serif;
-
-
 }
 
-.sidenav a:hover {
+#sidenav a:hover {
     color: #f1f1f1;
 }
 
@@ -62,13 +66,18 @@ h2, h4 {
     /*margin-left: 150px;  Same as the width of the sidenav */
 }
 
+.credits {
+    margin-bottom: 100px;
+}
+
 footer {
 	/*background-color: #FFF3F2;*/
 	background-color: #BCE8DD;
 	position: fixed;
 	bottom: 0;
-	left:100px;
+	/*left:100px;*/
 	width: 100%;
+    margin-top: 100px;
 }
 .footerLi {
 	display: inline;
@@ -77,7 +86,7 @@ footer {
 	font-size: 16px;
 }
 
-@media screen and (max-height: 450px) {
+/*@media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
-}
+}*/
