--- a/main.css
+++ b/main.css
@@ -1,78 +1,193 @@
-.jumbotron {
+/*.jumbotron {
 	background-color: pink;
 	position: relative;
-/*	left:100px;
-*/	width: 100%;
+    width: 100%;
 	text-align: right;
-	/*background-image: url(pink_leaves.jpg);*/
 	background: linear-gradient(to left, #FFFFFF, #FFFFFF 1%, transparent), url('green_leaves.jpg');
-	/*opacity: 1;*/
+}
+.jumbotronText {
+    font-family: 'Trochut', cursive;
+    color: #69586C;
+}
+*/
 
+#titleDiv {
+    float: right;
 }
 
-.jumbotronText {
-	/*margin-right: 50px;*/
-	font-family: 'Reem Kufi', sans-serif;
-
+h1 {
+    font-family: 'Trochut', cursive;
+    color: #F8F8F9;
+    font-size: 150px;
+    padding-top: 50px;
 }
 
 body {
     font-family: "Lato", sans-serif;
     /*letter-spacing: 10px;0px;*/
+    background-color: #404040;
+}
+
+.projectTitle {
+    font-family: 'Trochut', cursive;
+
 }
 
 h2, h4 {
 	font-family: 'Julius Sans One', sans-serif;
+    color: #F8F8F9
+}
 
+.indentLeft {
+    margin-left: 100px;
 }
 
 p {
     font-family: 'Nanum Myeongjo', serif;
     font-size: 16px;
-
+    color: #F8F8F9
 }
 
+/*NAV BAR STYLING*/
 #sidenav {
-    height: 100px;
+    height: 80px;
     width: 100vh;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
-	opacity: 0.8;
+    background-color: #B5BAC5;
+	opacity: 1;
     transform-origin: left top;
   	transform:rotate(-90deg) translateX(-100%);
 }
 
 #sidenav a {
-    padding: 40px 25px 10px 15px;
+    padding: 40px 30px 10px 15px;
     text-decoration: none;
     font-size: 20px;
-    color: #818181;
+    color: #69586C;
     display: block;
     float: right;
     height: 100%;
-    line-height:45px;
+    line-height:5px;
     text-transform: uppercase;
     font-family: 'Reem Kufi', sans-serif;
 }
 
 #sidenav a:hover {
-    color: #f1f1f1;
+    color: #F8F8F9;
 }
 
 .main {
     /*margin-left: 150px;  Same as the width of the sidenav */
 }
 
-.credits {
-    margin-bottom: 100px;
+/*PROJECT SECTION FLIP COMPONENTS*/
+.flip-container {
+    perspective: 1000px;
+    display: inline-block;
+    margin-left: 100px;
+}
+/* flip the pane when hovered */
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+    transform: rotateY(180deg);
 }
 
+.flip-container, .front, .back {
+    width: 600px;
+    height: 400px;
+    background-color: #B5BAC5;
+    border-radius: 5px;
+}
+
+/* flip speed goes here */
+.flipper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+/* front pane, placed above back */
+.front {
+    z-index: 2;
+    /* for firefox 31 */
+    transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+    transform: rotateY(180deg);
+}
+
+.projectDescRight {
+    float: right;
+    margin-right: 100px;
+}
+
+.projectDescLeft {
+    float: left;
+    margin-left: 100px;
+}
+
+.projectText p {
+    color: #404040;
+}
+
+#projects h2 {
+    color: #404040;
+}
+
+#projectFlip2 {
+    float: right;
+    margin-right: 100px;
+}
+
+#pizzaFront {
+    background-image: url("pizzatime1.png");
+}
+
+#pizzaBack {
+    background-image: url("pizzatime2.png");
+}
+
+#remindherFront {
+    background-image: url("remindher1.png");
+}
+
+#remindherBack {
+    background-image: url("remindher2.png");
+}
+
+/*Other section styling*/
+#about {
+    text-align: center;
+}
+
+#projects {
+    background-color: #B5BAC5;
+    color: #404040;
+    padding-bottom: 20px;
+}
+
+#credits {
+    margin-bottom: 50px;
+}
+
+/*FOOTER STYLING*/
 footer {
 	/*background-color: #FFF3F2;*/
-	background-color: #BCE8DD;
+	/*background-color: #BCE8DD;*/
+    background-color: #F8F8F9;
 	position: fixed;
 	bottom: 0;
 	/*left:100px;*/
