--- a/portfolio2_style.css
+++ b/portfolio2_style.css
@@ -22,7 +22,7 @@
 
   .vl-large {
     border-left: 1px solid black;
-    height: 300px;
+    height: 350px;
     margin-left: 25px;
     margin-top: -40px;
     display: inline-block;
@@ -63,7 +63,7 @@
     font-size: 15px;
   }
 
-  #skills li, #contact p {
+  #skills li, #skills p, #contact p {
     font-family: 'Poiret One', cursive;
     font-size: 15px;
   }
