--- a/portfolio2_style.css
+++ b/portfolio2_style.css
@@ -1,5 +1,8 @@
 
-/*SMALL SCREEN*/
+/******************************/
+/********  SMALL SCREEN  ******/
+/******************************/
+
 @media screen and (max-width: 650px) {
 
   .initial-circle {
@@ -13,9 +16,6 @@
     color: black;
     font-size: 26px;
     font-weight: 700;
-    /*margin: 0 auto 40px;*/
-    /*background-color: #fff9ec;*/
-    /*font-family: 'Sacramento', cursive;*/
     font-family: 'Grand Hotel', cursive;
     margin-left: 15px;
   }
@@ -34,8 +34,25 @@
 
   }
   .nav-section {
-    /*margin-right: -15px;*/
     margin-left: 20px;
+  }
+
+  .numbers {
+    margin: 30px 18px;
+    display: inline-block;
+    font-family: 'Grand Hotel', cursive;
+  }
+
+  .vl-small {
+    border-left: 1px solid black;
+    height: 30px;
+    margin: -50px 20px 0px 25px;
+    display: inline-block;
+  }
+
+  .nav-lines {
+    text-align: right;
+    margin-bottom: 10px;
   }
 
   h1 {
@@ -51,7 +68,6 @@
 
   #projects h2 {
     margin-left: 20px;
-
   }
 
   #about h1, #projects h1, #skills h1, #contact h1 {
@@ -89,7 +105,11 @@
   }
 }
 
-/*BIG SCREEN*/
+
+/******************************/
+/********  BIG SCREEN  ********/
+/******************************/
+
 @media screen and (min-width: 651px) {
 
   .initial-circle {
@@ -103,9 +123,6 @@
     color: black;
     font-size: 26px;
     font-weight: 700;
-    /*margin: 0 auto 40px;*/
-    /*background-color: #fff9ec;*/
-    /*font-family: 'Sacramento', cursive;*/
     font-family: 'Grand Hotel', cursive;
   }
 
@@ -118,20 +135,36 @@
   }
 
   .nav-headers {
-    /*float: right;*/
-    /*bottom: 50px;*/
     font-family: 'Poiret One', cursive;
     font-size: 16px;
     font-weight: bold;
+    margin-right: 10px;
   }
+
   .nav-section {
-      /*margin: -50px 20px 0px 0px;*/
-      /*padding-right: -20px;*/
       display: inline-block;
       transform-origin: left top;
       transform:rotate(-90deg) translateX(-100%);
       margin-right: -30px;
-      margin-left: 38px;
+      margin-left: 32px;
+  }
+
+  .numbers {
+    margin: 50px 18px;
+    display: inline-block;
+    font-family: 'Grand Hotel', cursive;
+  }
+
+  .vl-small {
+    border-left: 1px solid black;
+    height: 40px;
+    margin: -50px 20px 0px 25px;
+    display: inline-block;
+  }
+
+  .nav-lines {
+    text-align: right;
+    margin-bottom: 20px;
   }
 
   h1 {
@@ -143,7 +176,6 @@
     font-family: 'Poiret One', cursive;
     font-weight: bold;
     margin-left: 20px;
-
   }
 
   #about h1, #projects h1, #skills h1, #contact h1 {
@@ -181,6 +213,9 @@
   }
 }
 
+/******************************/
+/********  ALL SCREENS  *******/
+/******************************/
 
 .nav-section a {
   color:black;
@@ -193,7 +228,6 @@
 .mockups {
   width: 100%;
   height: auto;
-  /*margin: 20px;*/
 }
 
 .initial-circle a {
@@ -204,26 +238,7 @@
   display: inline-block;
 }
 
-.numbers {
-  margin: 50px 18px;
-  /*text-align: center;*/
-  /*width: 600px;*/
-  display: inline-block;
-    font-family: 'Grand Hotel', cursive;
-}
-
-.vl-small {
-    border-left: 1px solid black;
-    height: 40px;
-    margin: -50px 20px 0px 25px;
-    display: inline-block;
-}
-
-.nav-lines {
-  text-align: right;
-  margin-bottom: 20px;
-}
-
+/* Animation on sub-title */
 .tracking-in-expand-fwd {
   -webkit-animation: tracking-in-expand-fwd 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
           animation: tracking-in-expand-fwd 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
