--- a/portfolio2_style.css
+++ b/portfolio2_style.css
@@ -134,6 +134,10 @@
     display: inline-block;
   }
 
+  .nav-span {
+    float: right;
+  }
+
   .nav-headers {
     font-family: 'Poiret One', cursive;
     font-size: 16px;
@@ -236,6 +240,7 @@
 
 .logo {
   display: inline-block;
+  /*float: left;*/
 }
 
 /* Animation on sub-title */
